fixed footer z-index

--- a/styles/home.css
+++ b/styles/home.css
@@ -11,6 +11,7 @@ footer {
     justify-content: flex-end;
     position: fixed;
     bottom: 0px;
+    z-index: -10;
 }
 
 .welcome-text {
